<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">
        <com.h6ah4i.android.preference.NumberPickerPreferenceCompat
            app:key="nearby-gyms"
            app:title="@string/nearby_gym_count_title"
            app:summary="@string/value_placeholder"
            app:nppc_minValue="1"
            app:nppc_maxValue="500"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_header">
        <Preference app:key="info" app:title="App Version" app:summary="1.0" />
        <Preference app:key="about" app:title="@string/about_app" app:summary="@string/about_app_desc" />
    </PreferenceCategory>

</PreferenceScreen>
