<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_pref_days"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <CheckBox
        style="@style/cb_highlight"
        android:id="@+id/cb_day1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/txt_day1_short"
        />
    <CheckBox
        style="@style/cb_highlight"
        android:id="@+id/cb_day2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/txt_day2_short"
        />
    <CheckBox
        style="@style/cb_highlight"
        android:id="@+id/cb_day3"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/txt_day3_short"
        />
    <CheckBox
        style="@style/cb_highlight"
        android:id="@+id/cb_day4"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/txt_day4_short"
        />
    <CheckBox
        style="@style/cb_highlight"
        android:id="@+id/cb_day5"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/txt_day5_short"
        />
    <CheckBox
        style="@style/cb_highlight"
        android:id="@+id/cb_day6"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/txt_day6_short"
        />
    <CheckBox
        style="@style/cb_highlight"
        android:id="@+id/cb_day7"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/txt_day7_short"
        />

</LinearLayout>